# allennlp

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  STYLE.md  dev-requirements.txt  mkdocs-skeleton.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py
allennlp/: read.txt
allennlp/commands/: read.txt
allennlp/common/: params.py
allennlp/data/: __init__.py  instance.py  read.txt
allennlp/data/data_loaders/: data_collator.py  data_loader.py
allennlp/data/dataset_readers/: dataset_reader.py  read.txt
allennlp/data/dataset_readers/dataset_utils/: read.txt  span_utils.py
allennlp/data/fields/: field.py  read.txt  text_field.py  text_fields.excalidraw
allennlp/data/samplers/: __init__.py
allennlp/data/token_indexers/: read.txt
allennlp/data/tokenizers/: read.txt
allennlp/models/: basic_classifier.py  model.py  read.txt
tests/data/: instance_test.py
tests/data/dataset_readers/: datareadtest.py  dataset_reader_test.py
