# 这个文件主要是用于配置 black 工具和构建系统的参数，以确保项目中的代码格式化和构建过程能够按预期进行
[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
